# ChangeLog for sci-electronics/iverilog
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sci-electronics/iverilog/ChangeLog,v 1.39 2013/01/27 09:34:57 grobian Exp $

  27 Jan 2013; Fabian Groffen <grobian@gentoo.org> iverilog-0.9.6.ebuild:
  Fix out of prefix install, bug #453884

*iverilog-0.9.6 (21 Jan 2013)

  21 Jan 2013; Michael Weber <xmw@gentoo.org> +iverilog-0.9.6.ebuild:
  Version bump, new HOMEPAGE

  28 May 2012; Michael Weber <xmw@gentoo.org> iverilog-0.9.5.ebuild:
  Add parallel build workaround (-j1) to fix bug 417579)

  25 May 2012; Michael Weber <xmw@gentoo.org> iverilog-0.9.5.ebuild:
  Fix RDEPEND

*iverilog-0.9.5 (25 May 2012)

  25 May 2012; Michael Weber <xmw@gentoo.org> +iverilog-0.9.5.ebuild:
  Version bump, remove -j1, EAPI-4

*iverilog-0.9.3 (02 Nov 2010)

  02 Nov 2010; Rafael G. Martins <rafaelmartins@gentoo.org>
  +iverilog-0.9.3.ebuild:
  Version bump.

  01 Jun 2010; Samuli Suominen <ssuominen@gentoo.org> iverilog-0.9.1.ebuild,
  +files/iverilog-0.9.1-gcc45.patch:
  Fix building with GCC 4.5+ wrt #319361 by Kacper Kowalik.

  09 May 2010; Raúl Porcel <armin76@gentoo.org> iverilog-0.9.1.ebuild:
  sparc stable wrt #302500

  18 Apr 2010; <nixnut@gentoo.org> iverilog-0.9.1.ebuild:
  ppc stable #302500

  16 Apr 2010; Markos Chandras <hwoarang@gentoo.org> iverilog-0.9.1.ebuild:
  Stable on amd64 wrt bug #302500

  11 Apr 2010; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  iverilog-0.9.1.ebuild:
  x86 stable wrt bug #302500

  13 Oct 2009; Denis Dupeyron <calchan@gentoo.org> -iverilog-0.8.2.ebuild,
  -iverilog-0.8.3.ebuild, -iverilog-0.8.4.ebuild:
  Removed old ebuilds after stabilization.

  11 Oct 2009; Raúl Porcel <armin76@gentoo.org> iverilog-0.8.6.ebuild:
  sparc stable wrt #245704

*iverilog-0.9.1 (11 Jul 2009)

  11 Jul 2009; Denis Dupeyron <calchan@gentoo.org> +iverilog-0.9.1.ebuild:
  Version bump, which apparently fixes bug #273834. Fixed LDFLAGS.
